test/spec_vectors/elem/ok/module_25.wat
(module (func) (table 1 funcref) (elem (table 0) (i32.const 0) func 0))