test/spec_vectors/elem/fail/module_75.wat
(module (table 1 funcref) (elem (i32.const 0) funcref (i32.const 0)))